# OpenSteamController-Continued

./: ProjectSummary.md  README.md
CAD-Releases&Mods/: README.md
FCC Reports/Vigor Wireless Dongle-2AES41002/: Backup.odt
Firmware/BLE_Decompilation/: readme.md
Firmware/Rust_Firmware/: .gitignore  BUILD_STATUS.md  BUILD_STATUS.md.bak  Cargo.toml  README.md  build.sh  firmware.map  flash.sh  keycodes.md  lpc_checksum_fixer.py  memory.x
Firmware/Rust_Firmware/.cargo/: config.toml
Firmware/Rust_Firmware/src/: main.rs
Firmware/Rust_Firmware/src/chip/: gpio.rs  iocon.rs  mod.rs  registers.rs  sysctl.rs
Firmware/Rust_Firmware/src/chip/usbd/: mod.rs
Firmware/Rust_Firmware/src/controller/: haptics.rs  input.rs  mod.rs
Firmware/Rust_Firmware/src/drivers/: mod.rs  mpu6500.rs  nrf51822.rs  trackpad.rs  trackpad_new.rs  trackpad_old.rs
Firmware/Rust_Firmware/src/hal/: clock.rs  gpio.rs  i2c.rs  init.rs  mod.rs  pins.rs  spi.rs  sysctl.rs  usart.rs  usb.rs  usb_hid.rs
Firmware/Rust_Firmware/src/hal/peripherals/: mod.rs
Firmware/Rust_Firmware/src/hal/system/: firmware.rs  mod.rs
Firmware/nRF51822_Firmware/: Cargo.toml  README.md
Firmware/nRF51822_Firmware/src/: main.rs
Lambda_Project/: Lambda_mainboard_EXP.md  README.md
Lambda_Project/RibbonCable/: README.md
Mods/CAD-Releases/: README.md
Mods/DevBoard/: README.md
Mods/Jingle/: README.md
Mods/SwitchProWiredController/: README.md
Parts_List/: SteamController_MainBOM.xlsx
Prototype Assets/: README.md
ReverseEngineering/: LPC11U37F_Software.md  Luna_maiboard_V000456-00_rev3.md
(+252 files in other folders)
