[package]
name = "steamcontroller_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0"
lpc11xx = "0.2"
nb = "1.1.0"
libm = "0.2.8"
usb-device = "0.3.2"
usbd-hid = "0.8.2"
critical-section = "1.1.1"

[profile.release]
codegen-units = 1
debug = true
lto = true
